<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="hot_topic_1">\t政企合力共推AI大模型 产业链公司迎新机遇政企合力共推AI大模型 产业链公司迎新机遇政企合力共推AI大模型 产业链公司迎新机遇政企合力共推AI大模型 产业链公司迎新机遇</string>
    <string name="hot_topic_2">\t影视行业拥抱人工智能</string>
    <string name="hot_topic_3">\t联想集团：AI服务器等基础设施业务年收入超20亿美元</string>
    <string name="vote">&#xe683;</string>
    <string name="daily_knowledge">&#xe608;</string>
    <string name="daily_clock_in">&#x100ac;</string>
    <string name="vote_questions">\t你认为人工智能有前途吗？</string>
    <string name="vote_1">yes</string>
    <string name="vote_2">no</string>
    <string name="news_title">热门头条</string>
    <string name="news_title_1">每天5分钟最前沿AI资讯</string>
    <string name="expert_title">名人专家</string>
    <string name="law_title">法律法规</string>
    <string name="last_view">上次浏览\t:\t</string>
    <string name="last_view_content">每天5分钟最前沿AI资讯</string>
    <string name="expert_tv_name_1">阿兰·麦席森·图灵</string>
    <string name="expert_life_1">(1912-1954)</string>
    <string name="expert_tv_content_1">人工智能之父</string>
    <string name="expert_tv_name_2">史蒂芬·霍金</string>
    <string name="expert_life_2">(1915-2013)</string>
    <string name="expert_life_3">(1984- )</string>
    <string name="expert_tv_content_2">人工智能预言家</string>
    <string name="expert_tv_name_3">贾斯汀·卡塞尔</string>
    <string name="expert_tv_content_3">人工智能预言家</string>
    <string name="daily_knowledge_1">每日知识</string>
    <string name="daily_clock">每日打卡</string>
    <string name="daily_knowledge_context">这里是知识内容</string>
    <string name="daily_clock_context">今日还未打卡哦~</string>
    <string name="official">寻根究底</string>
    <string name="law_icon">&#xe61c;</string>
    <string name="recommend_course">推荐课程</string>
    <string name="recommend_course_1">最新课程</string>
    <string name="recommend_course_2">最热课程</string>
    <string name="recommend_book">推荐书目</string>
    <string name="recommend_book_1">书目1</string>
    <string name="recommend_book_2">书目2</string>
    <string name="interview">专家访谈</string>
    <string name="interview_name">专家名</string>
    <string name="interview_job">职称</string>
    <string name="interview_contect">内容</string>
    <string name="hot_technology">热门技术</string>
    <string name="hot_technology_1">名称</string>
    <string name="hot_technology_2">内容</string>
    <string name="learn">专题学习—神经网络</string>
    <string name="readstudey">品味书本</string>
    <string name="learn_name">神经网络</string>
    <string name="learn_namber">4.4w人在学</string>
    <string name="learn_1">眼花缭乱！</string>
    <string name="check">查看更多 ></string>
    <string name="law">法律法规</string>
    <string name="breakthough">专项突破</string>
    <string name="breakthough_1">课程名</string>
    <string name="read">精听细读</string>
    <string name="read_1_1">xxx</string>
    <string name="read_1_2">xxxxxxxxx</string>
    <string name="ted">Ted大会</string>
    <string name="ted_name">标题</string>
    <string name="ted_number">共12篇</string>
    <string name="ted_style">类型</string>
    <string name="discovery">我的发现</string>
    <string name="discovery_title">————标题————</string>
    <string name="discovery_1">标题</string>
    <string name="competition_province">全部省份</string>
    <string name="competition_type">全部类型</string>
    <string name="competition_1">名称</string>
    <string name="find">寻找伙伴</string>
    <string name="find_1">简介</string>
    <string name="carousel">标题</string>
    <string name="vote_num_1">200</string>
    <string name="vote_num_2">500</string>
    <string name="history_title">百年历程</string>
    <string name="grid_title">猜你喜欢</string>
    <string name="tab_1">实践</string>
    <string name="tab_2">科普</string>
    <string name="tab_3">学习</string>
    <string name="search">&#xe632;</string>
    <string name="record">实践记录</string>
    <string name="record_number">参加活动数</string>
    <string name="record_number_2">现有活动数</string>
    <string name="record_number_3">预约数</string>
    <string name="record_number_4">心愿数</string>
    <string name="activities">热门活动</string>
    <string name="theme_icon">&#xe624;</string>
    <string name="advertise">宣传图</string>
    <string name="share">活动分享</string>
    <string name="share_1">点击查看</string>
    <string name="competition">竞赛活动</string>
    <string name="share_2">活动风姿</string>
    <string name="theme_1">本周主题</string>
    <string name="come">欢迎加入</string>
    <string name="theme_2">主题贡献者</string>
    <string name="come_1">寻找群组</string>
    <string name="come_2">寻找伙伴</string>
    <string name="come_3">快来加入我们吧~</string>
    <string name="search_tv">ai今日说法</string>
    <string name="law_1">积极实践示范。遵守人工智能相关法规、政策和标准，主动将人工智能伦理道德融入管理全过程，率先成为人工智能伦理治理的实践者和推动者，及时总结推广人工智能治理经验，积极回应社会对人工智能的伦理关切。</string>
    <string name="law_2">《新一代人工智能伦理规范》第六条</string>
    <string name="law_3">中华人民共和国科学技术部</string>
    <string name="daily_1">每日小知识:\n</string>
    <string name="daily_2">人工智能的目标包括：推理、知识表示、自动规划、机器学习、自然语言理解、计算机视觉、机器人学和强人工智能八个方面。</string>
    <string name="like_2">人工智能1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</string>
    <string name="fall">第四届中国人工智能大赛成果发布会顺利举办</string>
    <string name="fall_1">华夏经纬网</string>
    <string name="component_1">热搜论坛</string>
    <string name="component_2">ai历史</string>
    <string name="component_3">ai绘画</string>
    <string name="component_4">ai问答社区</string>
    <string name="component_5">教育课堂</string>
    <string name="study">开启你的学习之旅</string>
    <string name="study_2">课程列表</string>
    <string name="tab_icon_1">&#xe633;</string>
    <string name="tab_icon_2">&#xe63c;</string>
    <string name="tab_icon_3">&#xe643;</string>
    <string name="study_icon">&#xe6cd;</string>
    <string name="study_icon_2">&#xe8d4;</string>
    <string name="study_icon_3">&#xe601;</string>
    <string name="study_icon_4">&#xe63c;</string>
    <string name="study_icon_5">&#xe765;</string>
    <string name="study_tv_1">精选课程</string>
    <string name="study_tv_2">30+达人正在学习</string>
    <string name="study_tv_3">推荐课程</string>
    <string name="study_tv_4">我的课程</string>
    <string name="book_1">#人工智能</string>
    <string name="book_2">#入门</string>
    <string name="book_3">本书从多个维度描绘了人工智能从爆发到遭遇寒冬再到野蛮生长的发展历程，直击了工业机器人、救援机器人、无人驾驶汽车、语音助手Siri等前沿领域。</string>
    <string name="interview_1">《干货分享 ->》</string>
    <string name="button">查看详情</string>
    <string name="content_1">title</string>
    <string name="content_2">name</string>
    <string name="content_3">去看看</string>
    <string name="content_4">马上查看</string>
    <string name="content_5">2335 人学习中</string>
    <string name="content_5_icon">&#xe8c9;</string>
    <string name="content_6_icon">&#xe8a8;</string>
    <string name="icon_switch_identity">&#xe8a8;</string>
    <string name="icon_sign">&#xe687;</string>
    <string name="content_7">身份切换 ></string>
    <string name="point">&#xe61a;</string>
    <string name="icon_fall_video">&#xea82;</string>
    <string name="search_value_hint">试试</string>
    <string name="url_start_gif">
        https://bucket-lsp.oss-cn-hangzhou.aliyuncs.com/2023/09/15/6bdc6ccd-3e1a-4184-8d34-78fd23bc9aa8.gif
    </string>
    <string name="url_start">
        https://bucket-lsp.oss-cn-hangzhou.aliyuncs.com/2023/09/15/b3a3ff82-9193-4634-87c8-8715d1cf0575.png
    </string>
</resources>