<?xml version="1.0" encoding="utf-8"?>
<org.jxxy.debug.corekit.widget.RoundConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/vote_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_questions"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        android:textColor="@color/text100"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout

        android:id="@+id/vote_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vote_num_1"
        app:layout_constraintTop_toBottomOf="@+id/vote_question">

    <Button
        android:id="@+id/vote_yes"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/vote_1"
        android:layout_weight="3"
        android:background="@drawable/border_vote_yes"
        android:visibility="visible"/>

        <Button
            android:id="@+id/vote_left"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:enabled="false"
            android:text="23"
            android:background="@drawable/border_vote_left"
            android:visibility="gone" />

        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/voteIcon"
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/primary_100"
            android:layout_height="wrap_content"
            android:text="@string/vote"/>
    <Button
        android:id="@+id/vote_no"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/vote_2"

        android:layout_weight="3"
        android:background="@drawable/border_vote_no"
        android:visibility="visible"/>

    <Button
        android:id="@+id/vote_right"
        android:layout_weight="3"
        android:enabled="false"
        android:layout_width="0dp"
        android:text="99"
        android:layout_height="30dp"
        android:background="@drawable/border_vote_right"
        android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/vote_num_1"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="@string/vote_num_1"
        android:textSize="15sp"
        android:layout_marginRight="120dp"
        app:layout_constraintTop_toBottomOf="@+id/vote_bar"
        app:layout_constraintRight_toLeftOf="@+id/vote_num_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/vote_num_2"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/vote_num_2"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/vote_bar"
        app:layout_constraintLeft_toRightOf="@id/vote_num_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
</org.jxxy.debug.corekit.widget.RoundConstraintLayout>