<?xml version="1.0" encoding="utf-8"?>
<org.jxxy.debug.corekit.widget.RoundConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:focusable="true">

    <org.jxxy.debug.corekit.widget.RoundConstraintLayout
        android:id="@+id/con_2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/浅蓝_3"
        android:clickable="true"
        android:focusable="true"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:round_corner="4dp">


        <View
            android:id="@+id/daily_view"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="64dp"
            android:background="@color/primary200"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_marginTop="10dp"
            android:id="@+id/daily_knowledge_icon"
            android:layout_width="19dp"
            android:layout_height="44dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/daily_knowledge"
            android:textColor="@color/primary100"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/daily_knowledge"
            app:layout_constraintStart_toStartOf="@+id/daily_knowledge"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/daily_knowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/daily_knowledge_1"
            android:textColor="@color/primary100"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_knowledge_icon" />

        <TextView
            android:id="@+id/daily_knowledge_context"
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/daily_knowledge_context"
            android:textColor="@color/primary100"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/daily_knowledge"
            app:layout_constraintStart_toEndOf="@+id/daily_knowledge_icon"
            app:layout_constraintTop_toTopOf="@+id/daily_knowledge_icon" />

        <org.jxxy.debug.corekit.widget.IconFont
            android:id="@+id/daily_clock_icon"
            android:layout_width="25dp"
            android:layout_height="44dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/daily_clock_in"
            android:textColor="@color/primary100"
            android:textSize="25sp"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@+id/daily_view"
            app:layout_constraintRight_toLeftOf="@+id/daily_clock"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/daily_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/daily_clock"
            android:textColor="@color/primary100"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/daily_clock_context"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:letterSpacing="0.1"
            android:text="@string/daily_clock_context"
            android:textColor="@color/primary100"
            android:textSize="@dimen/normal_text_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/daily_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/daily_view" />
    </org.jxxy.debug.corekit.widget.RoundConstraintLayout>
</org.jxxy.debug.corekit.widget.RoundConstraintLayout>