<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.jxxy.debug.corekit.widget.RoundConstraintLayout
        android:id="@+id/con_1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:round_corner="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/im"
            android:scaleType="fitXY"
            android:background="@color/灰"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </org.jxxy.debug.corekit.widget.RoundConstraintLayout>

    <org.jxxy.debug.corekit.widget.RoundConstraintLayout
        android:id="@+id/con_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/con_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/text100"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:text="@string/content_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/text200"
            android:text="@string/content_2"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_3"
            app:layout_constraintTop_toBottomOf="@+id/tv_1"/>

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/橙色2"
            android:textStyle="bold"
            android:text="@string/content_4"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_2"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </org.jxxy.debug.corekit.widget.RoundConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>