<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.jxxy.debug.corekit.widget.RoundConstraintLayout
        android:id="@+id/focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        android:layout_gravity="center_vertical"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:round_corner="8dp">

        <org.jxxy.debug.corekit.widget.RoundConstraintLayout
            android:id="@+id/rcl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/law_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:round_corner="8dp">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/law_2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </org.jxxy.debug.corekit.widget.RoundConstraintLayout>

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/law_3"
            app:layout_constraintBottom_toTopOf="@id/law_text"
            app:layout_constraintEnd_toEndOf="@+id/rcl_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rcl_title"
            app:layout_constraintTop_toBottomOf="@+id/rcl_title" />


        <TextView
            android:id="@+id/law_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/law_1"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </org.jxxy.debug.corekit.widget.RoundConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>