<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.jxxy.debug.corekit.widget.RoundConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <org.jxxy.debug.corekit.widget.RoundConstraintLayout
            android:id="@+id/con_1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:round_corner="3dp"
            android:layout_marginRight="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/con_2">

            <ImageView
                android:id="@+id/im"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>
        </org.jxxy.debug.corekit.widget.RoundConstraintLayout>

        <org.jxxy.debug.corekit.widget.RoundConstraintLayout
            android:id="@+id/con_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/con_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/title_text_size"
                android:text="@string/recommend_book"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/text100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
               />

            <org.jxxy.debug.corekit.widget.RoundConstraintLayout
                android:id="@+id/con_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary200"
                android:paddingHorizontal="3dp"
                android:paddingVertical="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_1"
                app:round_corner="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/book_1"
                    android:textColor="@color/white"

                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </org.jxxy.debug.corekit.widget.RoundConstraintLayout>

            <org.jxxy.debug.corekit.widget.RoundConstraintLayout
                android:id="@+id/con_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary200"
                android:paddingHorizontal="3dp"
                android:paddingVertical="2dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintStart_toEndOf="@+id/con_3"
                app:layout_constraintTop_toTopOf="@+id/con_3"
                app:round_corner="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/book_2"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </org.jxxy.debug.corekit.widget.RoundConstraintLayout>

            <TextView
                android:paddingBottom="2dp"
                android:id="@+id/tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:letterSpacing="0.1"
                android:maxLines="5"
                android:text="@string/book_3"
                android:textColor="@color/text200"
                android:textSize="@dimen/small_text_size"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/con_3" />
        </org.jxxy.debug.corekit.widget.RoundConstraintLayout>
    </org.jxxy.debug.corekit.widget.RoundConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>